fixed text overflow out of modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ h1 {
 	font-family: 'Roboto', sans-serif;
 	text-decoration: none;
 	color: #366ED1;
+	word-wrap: break-word;
 }
 
 a, #author {
